"More basic CSS"

--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <div class="bogoTitle">How fast can your computer do nothing in JavaScript?</div>
-  <div class="bogoDescription">PLACEHOLDER DESCRRIPTION</div>
-  <div class="bogoGoButton">PLACEHOLDER BUTTON</div>
-  <div class="bogoSignature">PLACEHOLDER SIGNATURE</div>
+  <div class="mainContainer">
+    <div class="bogoTitle">HOW FAST CAN YOUR COMPUTER DO NOTHING?</div>
+    <div class="bogoDescription">PLACEHOLDER DESCRRIPTION</div>
+    <div class="bogoGoButton"><input type="button" value="Enter the processor."></div>
+    <div class="bogoSignature">PLACEHOLDER SIGNATURE</div>
   
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
