--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="manifest" href="site.webmanifest">
+  <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
   <link rel="apple-touch-icon" href="icon.png">
   <link rel="shortcut icon" href="faviconstar.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/normalize.css">
@@ -23,10 +24,11 @@
 
   <!-- Add your site or application content here -->
   <div class="mainContainer">
-    <div class="bogoTitle">HOW FAST CAN YOUR COMPUTER DO NOTHING?</div>
-    <div class="bogoDescription">PLACEHOLDER DESCRIPTION</div>
+    <div class="bogoTitle"><p class="centerAlign">Bogo Loops</p></div>
+    <div class="bogoDescription"><p class="centerAlign">The purpose of this website is to show you fucking fast your computer is! 😉</p></div>
     <div class="bogoGoButtonContainer"><input type="button" class="bogoGoButton" value="Enter the processor."></div>
-    <div class="bogoSignature">PLACEHOLDER SIGNATURE</div>
+ 
+    <div class="bogoSignature"><p class="centerAlign bogoSignaturePara">Frank Gunsch Development</p></div>
   </div>
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
