--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <!-- Add your site or application content here -->
   <div class="mainContainer">
     <div class="bogoTitle"><p class="centerAlign">Bogo Loops</p></div>
-    <div class="bogoDescription"><p class="centerAlign">The purpose of this website is to show you fucking fast your computer is! 😉</p></div>
+    <div class="bogoDescription"><p class="centerAlign">The purpose of this website is to show you how incredibly fast your computer is! 😉</p></div>
     <div class="bogoGoButtonContainer"><input type="button" class="bogoGoButton" value="Enter the processor."></div>
  
     <div class="bogoSignature"><p class="centerAlign bogoSignaturePara">Frank Gunsch Development</p></div>
