--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <p class="BogoTitle-8">S</p>
     </div>
     <div class="bogoDescription"><p class="centerAlign">The purpose of this website is to show you how incredibly fast your computer is! 😉</p></div>
-    <div class="bogoGoButtonContainer"><input type="button" class="bogoGoButton" value="Enter the processor."></div>
+    <div class="bogoGoButtonContainer "><a href="#" class="bogoGoButton hvr-box-shadow-inset">enter the processor</a></div>
  
     <div class="bogoSignature"><p class="centerAlign bogoSignaturePara">Frank Gunsch Development</p></div>
   </div>
