added timing feature

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>You're wasting your time reading this, but since you are, congratulations.</title>
+  <title>BogoLoops</title>
   <meta name="author" content="Frank Gunsch">
   <meta name="description" content="How fast can your computer do nothing?">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -36,8 +36,8 @@
       <p class="BogoTitle-7">P</p>
       <p class="BogoTitle-8">S</p>
     </div>
-    <div class="bogoDescription"><p class="centerAlign">The purpose of this website is to show you how incredibly fast your computer is! 😉</p></div>
-    <div class="bogoGoButtonContainer "><a href="#" class="bogoGoButton hvr-box-shadow-inset">enter the processor</a></div>
+    <div class="bogoDescription"><p class="centerAlign">How fast can your browser do nothing?! 😉</p></div>
+    <div class="bogoGoButtonContainer centerAlign"><a href="#" class="bogoGoButton hvr-box-shadow-inset">Click here to do nothing.</a></div>
  
     <div class="bogoSignature"><p class="centerAlign bogoSignaturePara">Frank Gunsch Development</p></div>
   </div>
