--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <p class="BogoTitle-8">S</p>
     </div>
     <div class="bogoDescription"><p class="centerAlign">How fast can your browser do nothing?! 😉</p></div>
-    <div class="bogoGoButtonContainer centerAlign"><a href="#" class="bogoGoButton hvr-box-shadow-inset">Click here to do nothing.</a></div>
+    <div class="bogoGoButtonContainer centerAlign"><a href="#" id="mainButton" class="bogoGoButton hvr-box-shadow-inset">Click here to do nothing.</a></div>
  
     <div class="bogoSignature"><p class="centerAlign bogoSignaturePara">Frank Gunsch Development</p></div>
   </div>
