more aethestic changes

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
       <p class="BogoTitle-7">P</p>
       <p class="BogoTitle-8">S</p>
     </div>
+    <div class="bogoGoButtonContainer centerAlign"><a href="javascript:;" id="mainButton" class="bogoGoButton hvr-box-shadow-inset">Click here to do nothing.</a></div>
     <div class="bogoDescription"><p class="centerAlign">How fast can your browser do nothing?! 😉</p></div>
-    <div class="bogoGoButtonContainer centerAlign"><a href="#" id="mainButton" class="bogoGoButton hvr-box-shadow-inset">Click here to do nothing.</a></div>
+    <div class="bogoGoButtonContainer centerAlign"><a href="javascript:;" id="mainButton" class="bogoGoButton hvr-box-shadow-inset">Click here to do nothing.</a></div>
  
     <div class="bogoSignature"><p class="centerAlign bogoSignaturePara">Frank Gunsch Development</p></div>
   </div>
