just more formatting.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="">
 <!-- Stack: HTML, SASS, JavaScript, JQuery... -->
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -25,30 +26,41 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-    <div class="bogoTitle centerAlign">
-      <p class="BogoTitle-0">B</p>
-      <p class="BogoTitle-1">O</p>
-      <p class="BogoTitle-2">G</p>
-      <p class="BogoTitle-3">O</p>
-      <p class="BogoTitle-4">L</p>
-      <p class="BogoTitle-5">O</p>
-      <p class="BogoTitle-6">O</p>
-      <p class="BogoTitle-7">P</p>
-      <p class="BogoTitle-8">S</p>
-    </div>
-    <div class="bogoGoButtonContainer centerAlign"><a href="javascript:;" id="mainButton" class="bogoGoButton hvr-box-shadow-inset">Click here to do nothing.</a></div>
-    <div class="bogoDescription"><p class="centerAlign">How fast can your browser do nothing?! 😉</p></div>
-    <div class="bogoGoButtonContainer centerAlign"><a href="javascript:;" id="mainButton" class="bogoGoButton hvr-box-shadow-inset">Click here to do nothing.</a></div>
- 
-    <div class="bogoSignature"><p class="centerAlign bogoSignaturePara">Frank Gunsch Development</p></div>
+  <div class="bogoTitle centerAlign">
+    <p class="BogoTitle-0">B</p>
+    <p class="BogoTitle-1">O</p>
+    <p class="BogoTitle-2">G</p>
+    <p class="BogoTitle-3">O</p>
+    <p class="BogoTitle-4">L</p>
+    <p class="BogoTitle-5">O</p>
+    <p class="BogoTitle-6">O</p>
+    <p class="BogoTitle-7">P</p>
+    <p class="BogoTitle-8">S</p>
+  </div>
+  <div class="bogoGoButtonContainer centerAlign">
+    <a href="javascript:;" id="mainButton" class="bogoGoButton hvr-box-shadow-inset">Click here to do nothing.</a>
+  </div>
+  <div class="bogoDescription">
+    <p class="centerAlign">How fast can your browser do nothing?!(Its just an empty for loop) 😎</p>
+  </div>
+  <div class="bogoGoButtonContainer centerAlign">
+    <a href="javascript:;" id="mainButton" class="bogoGoButton hvr-box-shadow-inset">Click here to do nothing.</a>
+  </div>
+
+  <div class="bogoSignature">
+    <p class="centerAlign bogoSignaturePara">Frank Gunsch Development</p>
+  </div>
   </div>
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+  <script>
+    window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')
+  </script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
 
- <!-- Add GA later
+  <!-- Add GA later
    Google Analytics: change UA-XXXXX-Y to be your site's ID. 
   <script>
     window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
