added silly styling

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="manifest" href="site.webmanifest">
   <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Baloo+Thambi" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
   <link rel="apple-touch-icon" href="icon.png">
   <link rel="shortcut icon" href="faviconstar.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/normalize.css">
