Made it easier to click

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
   <div class="bogoGoButtonContainer centerAlign">
     <a href="javascript:;" id="mainButton" class="bogoGoButton hvr-box-shadow-inset">Click here to do nothing.</a>
   </div>
-  <div class="bogoDescription">
-    <p class="centerAlign">How fast can your browser do nothing?!(Its just an empty for loop) 😎</p>
+  <div class="bogoDescription centerAlign">
+    <p class="centerAlign description">How fast can your browser do nothing?!(Its just an empty for loop) 😎</p>
   </div>
   <div class="bogoGoButtonContainer centerAlign">
     <a href="javascript:;" id="mainButton" class="bogoGoButton hvr-box-shadow-inset">Click here to do nothing.</a>
