--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <link rel="shortcut icon" href="faviconstar.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/media-query.css">
 
 </head>
 
