added github icon for communication

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/media-query.css">
-
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 </head>
 
 <body>
@@ -51,6 +51,7 @@
 
   <div class="bogoSignature">
     <p class="centerAlign bogoSignaturePara">Frank Gunsch Development</p>
+   <p class="centerAlign"><a href="https://github.com/Yonkai" target="_blank"><i class="fab fa-github fa-2x "></i></a></p>
   </div>
   </div>
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
