added localstorage api

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </div>
 
   <div class="bogoSignature">
-    <p class="centerAlign bogoSignaturePara">Frank Gunsch Development</p>
+    <p class="centerAlign bogoSignaturePara">Made by Frank Gunsch</p>
    <p class="centerAlign"><a href="https://github.com/Yonkai" target="_blank"><i class="fab fa-github fa-2x "></i></a></p>
   </div>
   </div>
