Disabled mobile zooming?

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>BogoLoops</title>
   <meta name="author" content="Frank Gunsch">
   <meta name="description" content="How fast can your computer do nothing?">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no user-scalable=0">
   <link rel="manifest" href="site.webmanifest">
   <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Baloo+Thambi" rel="stylesheet">
